[project]
name = "scikit-base"
version = "0.7.2"
description = "Base classes for sklearn-like parametric objects"
authors = [
    {name = "sktime developers", email = "sktime.toolbox@gmail.com"},
]
maintainers = [
    {name = "sktime developers", email = "sktime.toolbox@gmail.com"},
    {name = "Franz Király"},
]
readme = "README.md"
keywords = [
    "data-science",
    "machine-learning",
    "scikit-learn",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8,<3.13"
dependencies = []

[project.optional-dependencies]
all_extras = ["numpy", "pandas"]

dev = [
    "scikit-learn>=0.24.0",
    "pre-commit",
    "pytest",
    "pytest-cov"
]

linters = [
    "mypy",
    "isort",
    "flake8",
    "black",
    "pydocstyle",
    "nbqa",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-quotes",
    "flake8-comprehensions",
    "pandas-vet",
    "flake8-print",
    "pep8-naming",
    "doc8",
]

binder = ["jupyter"]

docs = [
    "jupyter",
    "myst-parser",
    "nbsphinx>=0.8.6",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx-issues<5.0.0",
    "sphinx-gallery<0.16.0",
    "sphinx-panels",
    "sphinx-design<0.6.0",
    "Sphinx<8.0.0,!=7.2.0",
    "tabulate",
]

test = [
    "pytest",
    "coverage",
    "pytest-cov",
    "safety",
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn>=0.24.0",
]

[project.urls]
homepage = "https://github.com/sktime/skbase"
repository = "https://github.com/sktime/skbase"
documentation = "https://github.com/sktime/skbase"
download = "https://pypi.org/project/skbase/#files"

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools>61", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# ignore certain folders
addopts = [
    "--doctest-modules",
    "--ignore=docs",
    "--cov=.",
    "--cov-report=xml",
    "--cov-report=html",
]

[tool.isort]
profile = "black"
src_paths = ["skbase/*"]
multi_line_output = 3
known_first_party = ["skbase"]

[tool.black]
line-length = 88
extend-exclude = "^/setup.py docs/conf.py"

[tool.pydocstyle]
convention = "numpy"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["skbase"]
omit = ["*/setup.py", "tests/*", "docs/*", "skbase/tests/*"]

[tool.doc8]
max-line-length = 88
ignore = ["D004"]
ignore_path = ["docs/_build", "docs/source/api_reference/auto_generated"]

[tool.bandit]
exclude_dirs = ["*/tests/*", "*/testing/*"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.package-data]
sktime = [
    "*.csv",
    "*.csv.gz",
    "*.arff",
    "*.arff.gz",
    "*.txt",
    "*.ts",
    "*.tsv",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
