[project]
name = "scikit-base"
version = "0.13.1"
description = "Base classes for sklearn-like parametric objects"
authors = [
    {name = "sktime developers", email = "sktime.toolbox@gmail.com"},
]
maintainers = [
    {name = "sktime developers", email = "sktime.toolbox@gmail.com"},
    {name = "Franz Király"},
]
readme = "README.md"
keywords = [
    "data-science",
    "machine-learning",
    "scikit-learn",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<3.15"
dependencies = []

[project.optional-dependencies]
all_extras = ["numpy", "pandas"]

dev = [
    "scikit-learn>=0.24.0",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

linters = [
    "mypy",
    "ruff",
    "pydocstyle",
    "nbqa",
    "doc8",
]

binder = ["jupyter"]

docs = [
    "jupyter",
    "myst-parser",
    "nbsphinx>=0.8.6",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx-issues<6.0.0",
    "sphinx-gallery<0.21.0",
    "sphinx-panels",
    "sphinx-design<0.7.0",
    "Sphinx!=7.2.0,<10.0.0",
    "tabulate",
]

test = [
    "pytest",
    "coverage",
    "pytest-cov",
    "safety",
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn>=0.24.0",
]

[project.urls]
homepage = "https://github.com/sktime/skbase"
repository = "https://github.com/sktime/skbase"
documentation = "https://github.com/sktime/skbase"
download = "https://pypi.org/project/skbase/#files"

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools>61", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# ignore certain folders
addopts = [
    "--doctest-modules",
    "--ignore=docs",
    "--cov=.",
    "--cov-report=xml",
    "--cov-report=html",
]

[tool.pydocstyle]
convention = "numpy"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["skbase"]
omit = ["*/setup.py", "tests/*", "docs/*", "skbase/tests/*"]

[tool.doc8]
max-line-length = 88
ignore = ["D004"]
ignore_path = ["docs/_build", "docs/source/api_reference/auto_generated"]

[tool.ruff]
line-length = 88
extend-exclude = ["setup.py", "docs/source/conf.py"]
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E203",  # Whitespace before punctuation
    "E402",  # Module import not at top of file
    "E731",  # Do not assign a lambda expression, use a def
    "RET504",  # Unnecessary variable assignment before `return` statement
    "S101",  # Use of `assert` detected
    "C408",  # Unnecessary dict call - rewrite as a literal
    "UP031",  # Use format specifier instead of %
    "S102",  # Use of exec
    "C414",  # Unnecessary `list` call within `sorted()`
    "S301",  # pickle and modules that wrap it can be unsafe
    "C416",  # Unnecessary list comprehension - rewrite as a generator
    "S310",  # Audit URL open for permitted schemes
    "S202",  # Uses of `tarfile.extractall()`
    "S307",  # Use of possibly insecure function
    "C417",  # Unnecessary `map` usage (rewrite using a generator expression)
    "S605",  # Starting a process with a shell, possible injection detected
    "E741",  # Ambiguous variable name
    "S107",  # Possible hardcoded password
    "S105",  # Possible hardcoded password
    "PT018",  # Checks for assertions that combine multiple independent condition
    "S602",  # sub process call with shell=True unsafe
    "C419",  # Unnecessary list comprehension, some are flagged yet are not
    "C409",  # Unnecessary `list` literal passed to `tuple()` (rewrite as a `tuple` literal)
    "S113",  # Probable use of httpx call without timeout
]
allowed-confusables = ["σ"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["S101"]
"**/__init__.py" = [
    "F401",  # unused import
]
"**/tests/**" = [
    "D",  # docstring
    "S605",  # Starting a process with a shell: seems safe, but may be changed in the future; consider rewriting without `shell`
    "S607",  # Starting a process with a partial executable path
    "RET504",  # Unnecessary variable assignment before `return` statement
    "PT004",  # Fixture `tmpdir_unittest_fixture` does not return anything, add leading underscore
    "PT011",  # `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
    "PT012",  # `pytest.raises()` block should contain a single simple statement
    "PT019",  # Fixture `_` without value is injected as parameter, use `@pytest.mark.usefixtures` instead
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.bandit]
exclude_dirs = ["*/tests/*", "*/testing/*"]
zip-safe = true

[tool.setuptools.package-data]
sktime = [
    "*.csv",
    "*.csv.gz",
    "*.arff",
    "*.arff.gz",
    "*.txt",
    "*.ts",
    "*.tsv",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
