[metadata]
description_file = README.md
long_description_content_type = text/markdown

[bdist_wheel]
universal = false

[sdist]
formats = gztar

[flake8]
# inline with Black code formatter
max-line-length = 88
inline-quotes = double
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
extend-ignore = E203
extend-select = B904, B907
exclude = .git, __pycache__, docs/source/conf.py, build, dist
